sandc/test/fixtures/astRegression/shouldFail/productions/tryPseudex/EmptyTryBody.sand
pub class EmptyTryBody {
    foo() {
        let a = try {
            
        } catch e: Foo {
            b
        };
    }
}